<resources>
    <string name="app_name">WorkerPlus</string>

    <string name="exit_app_str">Press Again to Exit</string>

    <string name="rationale_init">APP Needs some Permission</string>
    <string name="permissions_denied_content_str">Permission Denied \nOpen Setting to Modify APP Permission</string>
    <string name="need_permissions_str">Permission Required</string>

    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="check_in_out">Check In / Out</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="mine">Mine</string>
    <string name="detail">Detail</string>

    <string name="enterprise_register">Enterprise Register</string>
    <string name="individual_register">Individual Register</string>

    <string name="retail">Retail</string>
    <string name="catering">Catering</string>
    <string name="manufacturing">Manufacturing</string>
    <string name="service">Service</string>

    <string name="login">Login</string>
    <string name="enterprise">Enterprise</string>
    <string name="individual">Individual</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>

    <string name="basic_information">Basic Information</string>
    <string name="target">Target</string>
    <string name="position">Position</string>
    <string name="number_of_employees">No. of Employees</string>
    <string name="workplace">Workplace</string>
    <string name="working_date">Working Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="job_nature">Job Nature</string>
    <string name="salary">Salary (S$)</string>
    <string name="min_of_salary">Min. of Salary</string>
    <string name="max_of_salary">Max. of Salary</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="prepaid_salary">Prepaid Salary</string>
    <string name="total_amount">Total Amount</string>

    <string name="range_1_1000">The range is 1 - 1000</string>
    <string name="range_1_10000">The range is 1 - 10000</string>

    <string name="name">Name</string>

    <string name="part_time">Part Time</string>
    <string name="full_time">Full Time</string>

    <string name="upload_employees_information">Upload Employees Information</string>
    <string name="upload">Upload</string>

    <string name="type">Type</string>

    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="bank_account">Bank Account</string>
    <string name="staff_number">Staff Number</string>
    <string name="accepted_job">Accepted Job</string>
    <string name="accepted_job_detail">Accepted Job Detail</string>

    <string name="on_duty">On Duty</string>
    <string name="off_duty">Off Duty</string>

    <string name="upload_success">Upload Success</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="no_storage_found">No Storage Found</string>

    <string name="logout">Logout</string>
    <string name="exit">Exit</string>

    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="copy_success">Copy Success</string>
</resources>
