<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_150"
    android:layout_marginTop="@dimen/dp_20"
    android:layout_marginLeft="@dimen/dp_20"
    android:layout_marginRight="@dimen/dp_20"
    app:cardCornerRadius="@dimen/dp_5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_card_view"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/dp_10"
            android:scaleType="fitCenter"/>

        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/dp_10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_3"
                android:text="@string/name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_3"
                android:text="@string/position"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_3"
                android:text="@string/number_of_employees"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_3"
                android:text="@string/salary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_3"
                android:text="@string/working_date"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_3"
                android:ellipsize="end"
                android:singleLine="true"
                android:textAlignment="textEnd"/>

            <TextView
                android:id="@+id/tv_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_3"
                android:ellipsize="end"
                android:singleLine="true"
                android:textAlignment="textEnd"/>

            <TextView
                android:id="@+id/tv_number_of_employees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_3"
                android:ellipsize="end"
                android:singleLine="true"
                android:textAlignment="textEnd"/>

            <TextView
                android:id="@+id/tv_salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_3"
                android:ellipsize="end"
                android:singleLine="true"
                android:textAlignment="textEnd"/>

            <TextView
                android:id="@+id/tv_working_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_3"

                android:ellipsize="end"
                android:singleLine="true"
                android:textAlignment="textEnd"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>