<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tc="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.codeexp.ui.viewmodel.individual.checkin.IndividualCheckInViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite">

        <com.example.codeexp.ui.widget.ToolBar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?android:attr/actionBarSize">

            <LinearLayout
                android:id="@+id/ll_check_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="@dimen/dp_5"
                    android:text="@string/on_duty"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="@dimen/dp_5"
                    android:text="@string/off_duty"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_18" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_check_title"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_150"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_unchecked" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_150"
                    android:layout_weight="1"
                    android:padding="@dimen/dp_5"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_unchecked" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_20"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_check_in"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/check_in"/>

                <Button
                    android:id="@+id/btn_check_out"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/dp_5"
                    android:text="@string/check_out"/>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
</layout>
